--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
       { "src": "index.js", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/bfhl(.*)", "dest": "/index.js" }
+      { "src": "/bfhl", "dest": "/index.js" }
     ]
   }
   
